--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
-Django==5.0.1
+Django~=4.2.2
 mysqlclient==2.0.1
 python-dotenv==1.0.0
 djangorestframework==3.14.0
 django-cors-headers==4.3.1
+requests~=2.31.0
+boto3~=1.28.1
