--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,8 @@
 version: '3'
 services:
   database:
-    image: mysql:8.0
     container_name: teamd_db
+    image: mysql:8.0
     env_file:
       - .env
     ports:
@@ -11,6 +11,7 @@ services:
       - teamd
 
   redis:
+    container_name: redis
     image: "redis:latest"
     ports:
       - "6379:6379"
@@ -18,10 +19,10 @@ services:
       - teamd
 
   backend:
+    container_name: teamd_backend
     build:
       context: .
       dockerfile: Dockerfile
-    container_name: teamd-backend
     ports:
       - "8000:8000"
     volumes:
@@ -38,6 +39,7 @@ services:
       - teamd
 
   rabbitmq:
+    container_name: rabbitmq
     image: "rabbitmq:3-management"
     ports:
       - "5672:5672"
@@ -57,6 +59,50 @@ services:
       - rabbitmq
     volumes:
       - .:/app
+    networks:
+      - teamd
+
+  prometheus:
+    container_name: prometheus
+    image: prom/prometheus
+    volumes:
+      - ./prometheus:/etc/prometheus
+    ports:
+      - "9090:9090"
+    command:
+      - '--config.file=/etc/prometheus/prometheus.yml'
+    depends_on:
+      - backend
+    networks:
+      - teamd
+
+  grafana:
+    container_name: grafana
+    image: grafana/grafana
+    ports:
+      - "3000:3000"
+    volumes:
+      - ./grafana:/var/lib/grafana
+    depends_on:
+      - prometheus
+      - backend
+    networks:
+      - teamd
+
+  node_exporter:
+    container_name: node-exporter
+    image: prom/node-exporter
+    ports:
+      - "9100:9100"
+    volumes:
+      - "/proc:/host/proc:ro"
+      - "/sys:/host/sys:ro"
+      - "/:/rootfs:ro"
+    command:
+      - '--path.procfs=/host/proc'
+      - '--path.sysfs=/host/sys'
+      - '--collector.filesystem.ignored-mount-points'
+      - '^/(sys|proc|dev|host|etc)($|/)'
     networks:
       - teamd
 
