--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -71,6 +71,16 @@ services:
       - "9090:9090"
     command:
       - '--config.file=/etc/prometheus/prometheus.yml'
+
+  nginx:
+    build: ./nginx
+    container_name: nginx
+    volumes:
+      - static_volume:/app/_static
+    ports:
+      - 80:80
+      - 443:443
+
     depends_on:
       - backend
     networks:
@@ -105,7 +115,10 @@ services:
       - '^/(sys|proc|dev|host|etc)($|/)'
     networks:
       - teamd
-
 networks:
   teamd:
     driver: bridge
+
+volumes:
+  postgres_data:
+  static_volume:
