--- a/prometheus/prometheus.yml
+++ b/prometheus/prometheus.yml
@@ -1,5 +1,6 @@
 global:
   scrape_interval: 15s
+  scrape_timeout: 15s
 
 scrape_configs:
   - job_name: 'backend'
@@ -11,3 +12,6 @@ scrape_configs:
   - job_name: 'node-exporter'
     static_configs:
       - targets: ['node_exporter:9100']
+  - job_name: 'cadvisor'
+    static_configs:
+      - targets: ['cadvisor:8080']
