feat: AlertManager 구현

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -121,6 +121,20 @@ services:
     networks:
       - teamd
 
+  alertmanager:
+    container_name: alertmanager
+    image: prom/alertmanager
+    ports:
+      - 9093:9093
+    volumes:
+      - ./alertmanager/:/etc/alertmanager/
+    restart: always
+    command:
+      - '--config.file=/etc/alertmanager/config.yml'
+      - '--storage.path=/alertmanager'
+    networks:
+      - teamd
+
 networks:
   teamd:
     driver: bridge
