--- a/prometheus/prometheus.yml
+++ b/prometheus/prometheus.yml
@@ -2,6 +2,16 @@ global:
   scrape_interval: 15s
   scrape_timeout: 15s
 
+rule_files:
+  - "alert.yml"
+
+alerting:
+  alertmanagers:
+  - scheme: http
+    static_configs:
+    - targets:
+      - "alertmanager:9093"
+
 scrape_configs:
   - job_name: 'backend'
     static_configs:
