--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 Django~=4.2.2
-mysqlclient==2.0.1
+mysqlclient==2.2.1
 python-dotenv==1.0.0
 djangorestframework==3.14.0
 django-cors-headers==4.3.1
@@ -15,3 +15,4 @@ celery~=5.3.6
 drf-yasg~=1.21.7
 django-prometheus==2.3.1
 gunicorn==21.2.0
+PyMySQL==1.1.0
